# foldback-service

./: .env.example  .gitignore  README.md  foldback-service.spec  pyproject.toml  start-foldback-service.bat
src/: __init__.py  config.py  main.py  models.py  pipeline.py  providers.py  stt.py  task_manager.py
tests/: test_api.py  test_models.py  test_pipeline.py  test_providers.py  test_task_manager.py
