[project]
name = "foldback-service"
version = "0.1.0"
description = "AI-Assisted Feedback Generation microservice for student management"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.18",
    "uvicorn>=0.34.0",
    "pydantic>=2.0",
    "httpx>=0.28.0",
    "ollama>=0.4.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub<1",
    "imageio-ffmpeg>=0.6.0",
    "setuptools<81",
    "speechbrain<1.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "whisperx>=3.4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124" }]
torchaudio = [{ index = "pytorch-cu124" }]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort
    "N",  # pep8-naming
    "D",  # pydocstyle
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = ["D100", "D104", "D203", "D213", "D406", "D407", "D413"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v"
